--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "@capacitor/ios": "3.2.5",
     "@capacitor/keyboard": "1.1.2",
     "@capacitor/status-bar": "1.0.5",
-    "@ionic/angular": "^5.5.2",
+    "@ionic/angular": "^5.8.4",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.6.0",
+    "swiper": "^7.0.9",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
